<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">Android Clean Architecture</string>
  <string name="url">http://www.android10.org/</string>

  <string name="activity_title_user_list">Users List</string>
  <string name="activity_title_user_details">User Details</string>
  <string name="activity_title_splash">Splash</string>
  <string name="activity_title_usecase">Use Case</string>
  <string name="activity_title_tutrial">Tutorial</string>

  <string name="btn_text_load_data">Load Sample Data</string>
  <string name="btn_text_load_time_line">Load Time Line</string>
  <string name="btn_text_retry">Retry</string>
  <string name="string_text_favorite">いいね</string>

  <string name="view_text_email">Email:</string>
  <string name="view_text_followers">Followers:</string>
  <string name="view_text_description">Description:</string>

  <string name="string_content_description">Non accessible view</string>

  //Exception messages
  <string name="exception_message_generic">There was an application error</string>
  <string name="exception_message_no_connection">There is no internet connection</string>
  <string name="exception_message_user_not_found">Cannot retrieve user data. Check your internet connection</string>

  <string name="button_capture">撮影する</string>
  <string name="btn_text_select_gallery">フォルダから選ぶ</string>
  <string name="btn_text_select_camera">カメラを起動する</string>
  <string name="text_register_picture">写真の登録方法を選んでね</string>
</resources>
