<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".view.activity.MainActivity"
    >

  <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/url"
      android:gravity="center"
      />

  <ImageView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:src="@drawable/logo"
      android:contentDescription="@string/string_content_description"
      />

  <Button
      android:id="@+id/btn_LoadData"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_text_load_data"
      />

  <Button
      android:id="@+id/btn_LoadTimeTine"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/btn_text_load_time_line"
  />
  <Button
      android:id="@+id/btn_LoadTest"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="test!" />

  <Button
      android:id="@+id/btn_LoginTwitter"
      android:layout_width="300px"
      android:layout_height="wrap_content"
      android:textColor="@color/white"
      android:background="@color/twitter"
      android:text="login with twitter" />

</LinearLayout>
